--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;    
+}
+
 html{
     font-family: 'IBM Plex Serif', serif;
 }
@@ -5,11 +11,16 @@ html{
 header{
     width: 100%;
     height: 50px;
+    display: flex;
     background-color: rgb(153, 0, 255);
 }
 
+header img{
+    width: 5%;
+}
+
 #head{
-    width: 20%;
+    width: 5%;
     line-height: 50px;
     text-align:center;
     float: left;
@@ -17,8 +28,8 @@ header{
 }
 
 header nav{
-    width: 80%;
-    line-height: 20px;
+    width: 90%;
+    line-height: 50px;
     float: right
 }
 
@@ -38,12 +49,12 @@ header nav ul li{
 
 header nav ul li a{
     color: black;
-    text-transform: uppercase;
+    text-transform: capitalize;
 }
 
-#imgUpload p{
+/* #imgUpload p{
     font-variant: small-caps;
-}
+} */
 
 #desc #descPara a:hover{
     color: green;
